cascade: cbi-tooltip: remove weird attributes, fixes 100% height on firefox

--- a/less/cascade.less
+++ b/less/cascade.less
@@ -3322,14 +3322,11 @@ span[data-tooltip] .label {
 }
 
 .cbi-tooltip {
-  position: absolute; 
-  z-index: 1000;
-  left: -10000px;
+  position: absolute;
   box-shadow: 0 0 2px #8b8b8b;
   border-radius: 3px;
   background: #fff;
   white-space: pre;
-  padding: 2px 5px;
   opacity: 0;
   transition: opacity .25s ease-in;
   transform: translate(-50%, 10%);
